Fix broken spacing between controls in the same row

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -1344,7 +1344,9 @@ hr {
 .basic-form input + select,
 .basic-form input + button,
 .basic-form select + .input,
-.basic-form select + .button select + .buttons select + select,
+.basic-form select + .button,
+.basic-form select + .buttons,
+.basic-form select + select,
 .basic-form select + input,
 .basic-form select + button,
 .basic-form button + input,
