--- a/site/resources/styles/core/form-core.less
+++ b/site/resources/styles/core/form-core.less
@@ -98,8 +98,8 @@
   input + select,
   input + button,
   select + .input,
-  select + .button
-  select + .buttons
+  select + .button,
+  select + .buttons,
   select + select,
   select + input,
   select + button,
